--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^18.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.7",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.1",
     "tslib": "^2.3.0",
