--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@apollo/client": "^3.11.10",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "apollo-angular": "^7.2.1",
     "axios": "^1.7.7",
+    "graphql": "^16.9.0",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.1",
     "tslib": "^2.3.0",
     "webapp": "file:",
-    "zone.js": "~0.14.10",
-    "@apollo/client": "^3.0.0",
-    "graphql": "^16"
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.1",
