--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "apollo-angular": "^7.2.1",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
