intento arreglo mapa, y algunas mejoras

--- a/angular.json
+++ b/angular.json
@@ -87,7 +87,11 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+            {
+              "input": "./process-env.js",
+              "bundleName": "env"
+            }]
           }
         }
       }
