--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "apollo-angular": "^7.2.1",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
     "graphql": "^16.9.0",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.1",
     "tslib": "^2.3.0",
     "webapp": "file:",
+    "webpack": "^5.96.1",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
